--- a/src/client/css/main.css
+++ b/src/client/css/main.css
@@ -7,7 +7,7 @@
 html, body {
     background-image: url("../img/bg.png");
     background-repeat: no-repeat;
-    background-size: auto;
+    background-size: cover;
 }
 
 html, body, canvas {
