--- a/src/client/css/main.css
+++ b/src/client/css/main.css
@@ -6,7 +6,7 @@
 
 html, body {
     background-image: url("../img/bg.png");
-    background-repeat: no-repeat;
+    overflow:hidden;
     background-size: cover;
 }
 
