--- a/src/client/css/main.css
+++ b/src/client/css/main.css
@@ -7,6 +7,7 @@
 html, body {
     background-image: url("../img/bg.png");
     overflow:hidden;
+    background-repeat: no-repeat;
     background-size: cover;
 }
 
