--- a/src/client/css/main.css
+++ b/src/client/css/main.css
@@ -5,7 +5,7 @@
 }
 
 html, body {
-    background-image: url("../img/bg.png");
+    background-image: url("../img/Vice City.jpg");
     overflow:hidden;
     background-repeat: no-repeat;
     background-size: cover;
