--- a/src/client/css/main.css
+++ b/src/client/css/main.css
@@ -77,6 +77,7 @@ div {
     border-radius: 5px;
     pointer-events: none;
     overflow-y:scroll;
+    overflow-x:hidden !important;
 }
 
 #instructions ul{
@@ -91,6 +92,8 @@ div {
     list-style: none;
     box-sizing: border-box;
     height: 285px;
+    overflow-y:scroll !important;
+    overflow-x:hidden !important;
     color:#ccc;
 }
 
