--- a/src/client/css/main.css
+++ b/src/client/css/main.css
@@ -51,7 +51,7 @@ div {
     position: absolute;
     padding: 10px;
     background:rgba(35, 35, 35, 0.7);
-    color: #ccc;
+    color: #d9dbd4;
     font-size: 16.1px;
     top: 10px;
     right: 10px;
